syntax = "proto3";

package messages;

message MessageID {
    uint64 message_id = 1;
}

message SignedMessage {
    bytes signature = 1;
    bytes publikkey = 2;
}

enum AnnounceEvent {
    COMPLETE_TORRENT = 0;
    QUERY_TORRENT_PEERS = 1;
    ENDPOINT_REGISTRY = 2;
    QUERY_ENDPOINT = 3;
}

message AnnounceRequest {
    MessageID messageIdentifier = 1;
    bytes infoHash = 2;
    bytes peerId = 3;
    bytes ip = 4;
    uint64 port = 5;
    uint64 left = 6;
    uint64 numWant = 7;
    bytes wallet = 8;
    AnnounceEvent event = 9;
    string target = 10;
    string from = 11;
}

message AnnounceResponse {
    MessageID messageIdentifier = 1;
    uint64 interval = 2;
    uint64 leechers = 3;
    uint64 seeders = 4;
    repeated string peers = 5;
    string addr = 6;
    AnnounceEvent event = 7;
    string target = 8;
    string from = 9;
}

message AnnounceRequestMessage {
    AnnounceRequest request = 1;
    SignedMessage signature = 2;
}

message AnnounceResponseMessage {
    AnnounceResponse response = 1;
    SignedMessage signature = 2;
}
